--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-filter==21.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.8.0
 drf-yasg==1.20.0
+gunicorn==20.1.0
 idna==3.2
 inflection==0.5.1
 itypes==1.2.0
@@ -16,9 +17,12 @@ Jinja2==3.0.1
 MarkupSafe==2.0.1
 packaging==21.0
 Pillow==8.3.2
+psycopg2==2.9.1
+psycopg2-binary==2.9.1
 pycodestyle==2.7.0
 PyJWT==2.1.0
 pyparsing==2.4.7
+python-dotenv==0.19.0
 pytz==2021.1
 requests==2.26.0
 ruamel.yaml==0.17.16
